deploy/base/goff-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goff-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: goff-proxy
      app.kubernetes.io/instance: goff-proxy
      app.kubernetes.io/name: goff-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: goff-proxy
        app.kubernetes.io/instance: goff-proxy
        app.kubernetes.io/name: goff-proxy
    spec:
      containers:
        - name: goff-proxy
          image: docker.io/thomaspoignant/go-feature-flag-relay-proxy
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: config
              mountPath: /goff/goff-proxy.yaml
              subPath: goff-proxy.yaml
        # the go-feature-flag-relay-proxy is a distroless container, so it
        # has no tools for debugging. This should probably be moved to the
        # dev overlay only ... TODO
        - name: debug
          image: registry.access.redhat.com/ubi8/ubi
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "while :; do sleep 3600; done"]
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: goff-proxy
